[gd_scene load_steps=43 format=3 uid="uid://f8a7c50dvi25"]

[ext_resource type="Script" path="res://scenes/enemies/rat.gd" id="1_btv5k"]
[ext_resource type="Texture2D" uid="uid://blxneorurmxe" path="res://assets/spritesheets/rat.png" id="2_k1n4q"]
[ext_resource type="Texture2D" uid="uid://clh28ehnvhiu1" path="res://assets/spritesheets/smallrat-Sheet.png" id="3_2ivop"]
[ext_resource type="Texture2D" uid="uid://bynvkabloqytl" path="res://assets/spritesheets/mediumRat-flippedSheet.png" id="3_gh03h"]
[ext_resource type="Script" path="res://scenes/enemies/Healthbar.gd" id="4_tnir3"]
[ext_resource type="Script" path="res://scripts/States/State Machine.gd" id="5_1roph"]
[ext_resource type="Script" path="res://scripts/States/EnemyIdle.gd" id="6_7b10q"]
[ext_resource type="Script" path="res://scripts/States/EnemyFreeze.gd" id="7_83dq6"]
[ext_resource type="Script" path="res://scripts/States/EnemyFollow.gd" id="8_n41xf"]
[ext_resource type="Script" path="res://scripts/States/EnemyAttack.gd" id="9_5usy0"]
[ext_resource type="AudioStream" uid="uid://bqqma6oalrfh7" path="res://assets/audio/sfx/rat_squeak.wav" id="10_fbfkl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_03ynq"]
atlas = ExtResource("3_gh03h")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_07vev"]
atlas = ExtResource("3_gh03h")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3muf"]
atlas = ExtResource("3_gh03h")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgx6g"]
atlas = ExtResource("3_gh03h")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gstfk"]
atlas = ExtResource("3_gh03h")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8u6ju"]
atlas = ExtResource("3_2ivop")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy8xn"]
atlas = ExtResource("3_2ivop")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lt23"]
atlas = ExtResource("3_2ivop")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qssjj"]
atlas = ExtResource("3_gh03h")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqedv"]
atlas = ExtResource("3_gh03h")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n8ot"]
atlas = ExtResource("3_gh03h")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xt1f"]
atlas = ExtResource("3_gh03h")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2kk6"]
atlas = ExtResource("3_gh03h")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_00lgi"]
atlas = ExtResource("3_gh03h")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts1j3"]
atlas = ExtResource("3_gh03h")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xsk7"]
atlas = ExtResource("3_gh03h")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynor6"]
atlas = ExtResource("3_gh03h")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmyto"]
atlas = ExtResource("3_gh03h")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k477g"]
atlas = ExtResource("3_gh03h")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar8xj"]
atlas = ExtResource("3_gh03h")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy8cy"]
atlas = ExtResource("3_gh03h")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrlhk"]
atlas = ExtResource("3_gh03h")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2o66"]
atlas = ExtResource("3_gh03h")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dawff"]
atlas = ExtResource("3_gh03h")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hflr3"]
atlas = ExtResource("3_gh03h")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g041"]
atlas = ExtResource("3_gh03h")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_op8jw"]
atlas = ExtResource("3_gh03h")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dr0am"]
atlas = ExtResource("3_gh03h")
region = Rect2(256, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_g2nd4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_k1n4q")
}],
"loop": true,
"name": &"RAT",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_03ynq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07vev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3muf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgx6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gstfk")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8u6ju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy8xn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lt23")
}],
"loop": true,
"name": &"blink",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qssjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqedv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n8ot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xt1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2kk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00lgi")
}],
"loop": true,
"name": &"tail_wag",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts1j3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xsk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynor6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmyto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k477g")
}],
"loop": true,
"name": &"walk_down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar8xj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy8cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrlhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2o66")
}],
"loop": true,
"name": &"walk_side",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dawff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hflr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g041")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op8jw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dr0am")
}],
"loop": true,
"name": &"walk_up",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_moawb"]
size = Vector2(72, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gae2i"]
size = Vector2(82, 67)

[node name="BigRat" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_btv5k")
detectionRadius = 125.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 3.8147e-06)
scale = Vector2(1.57812, 1.29963)
sprite_frames = SubResource("SpriteFrames_g2nd4")
animation = &"attack"
autoplay = "tail_wag"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -6)
shape = SubResource("RectangleShape2D_moawb")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false

[node name="enemy_hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(1, -5.5)
shape = SubResource("RectangleShape2D_gae2i")

[node name="dmg_iframe_cooldown" type="Timer" parent="."]
one_shot = true

[node name="Healthbar" type="ProgressBar" parent="."]
visible = false
offset_left = -13.0
offset_top = -20.0
offset_right = 16.0
offset_bottom = -15.0
step = 1.0
show_percentage = false
script = ExtResource("4_tnir3")

[node name="attack_cooldown" type="Timer" parent="."]
one_shot = true

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_1roph")
initial_state = NodePath("EnemyIdle")

[node name="EnemyIdle" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_7b10q")
enemy = NodePath("../..")

[node name="EnemyFreeze" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("7_83dq6")
enemy = NodePath("../..")

[node name="EnemyFollow" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("8_n41xf")
enemy = NodePath("../..")

[node name="EnemyAttack" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("9_5usy0")
enemy = NodePath("../..")

[node name="squeak" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_fbfkl")
volume_db = -10.0
pitch_scale = 0.8
attenuation = 15.0
panning_strength = 3.0

[node name="squeak_cooldown" type="Timer" parent="."]

[connection signal="timeout" from="dmg_iframe_cooldown" to="." method="_on_dmg_iframe_cooldown_timeout"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="finished" from="squeak" to="." method="_on_audio_stream_player_2d_finished"]
[connection signal="timeout" from="squeak_cooldown" to="." method="_on_squeak_cooldown_timeout"]
